hphp/test/slow/type_annotation/shape_typedef_with_unknown_fields_not_at_end.php.expectf
Fatal error: A right parenthesis (')') is expected here. in %s/test/slow/type_annotation/shape_typedef_with_unknown_fields_not_at_end.php on line 6